# Kutinfo_gyak

./: CMakeLists.txt  CV_hbendeguz.aux  CV_hbendeguz.tex  README.md  cv_tamkrisz.tex
hbendeguz_cv/: CV_hbendeguz.out
project/: CMakeLists.txt  a.out  popdin.cpp  summary.txt
